test/test-files/analyzer/functions/error-function-without-return/exception.out
Semantic error in : ./test-files/analyzer/functions/error-function-without-return/source.spice:1:1:
Missing return statement: Function without return statement

1  f<bool> isValid(int input = 12) {
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^